Avoid word wrapping in the middle of an inline code block

--- a/main.css
+++ b/main.css
@@ -27,6 +27,8 @@ pre {
 
 code {
     font-size: 14px;
+    white-space: nowrap;
+    display: inline-block;
 }
 
 h1, h2 {
